-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Repl 2024-01-22
-
148
-
None
-
None
-
None
-
None
-
None
-
None
-
None
In the existing errors only handling for bulkWrite we missed the case where you have an ordered:false write with errorsOnly:true and you get successful results after the last error message. This led to invalid memory access. To properly handle this we need to make sure that check for potential out of bounds access and avoid it.