SERVER-85166: Fix errorsOnly for bulkWrite (#18025)

GitOrigin-RevId: 44abbd3d025fe9e2bb9b0f93ad082ccb8d120ba5